# lofi

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.old.old  Makefile  README.md  TODO.md  TODO.txt  common.go  compile_commands.json  core.c  core.h  custom_list.go  default.nix  events.c  events.go  events.h  file_picker.go  go.mod  go.sum  listview.c  lua.go  lua_core.c  lua_core.h  main.c  main.go  meson.build  mingw-w64-toolchain.cmake  mode_manager.go  shell.nix.old  system_tray.go  todo.txt  ui.go  utils.c  utils.go
.cache/clangd/index/: definitions.c.C729F267238BB1BC.idx  definitions.h.8F45E6FC3721EB2A.idx  draw.c.5FFBD4694716BC9C.idx  draw.h.6126DDD2C1208D6D.idx  events.c.330C7A7FD2799377.idx  events.h.8F183CFCBB70C38F.idx  font.h.99360F92533231FF.idx  handler.c.6D93DDA445876E07.idx  handler.h.E1749EE0BF91854A.idx  init.c.49B58ACF33ADA2A3.idx  init.h.8AEB2CB02C08AA14.idx  lua_core.h.2C6A05B16948753C.idx  main.c.4688A190B133FD97.idx  modes.c.C08B6BCF6F182814.idx  modes.h.A3CF929E59EEDA41.idx  raygui.h.CCCFCF1139E3B7DF.idx  state.c.324110E06A5BF38B.idx  state.h.446BAF14C5771B90.idx  state.h.82D949715F018A71.idx  theme.c.20085F5BB683F65A.idx  theme.h.252363D365F4E208.idx  ui.c.6CAC5FC37AEFBD6B.idx  ui.h.56EEBB977229DAE6.idx  utils.c.A4C748E629138453.idx  utils.h.523283EF7AAEF620.idx  window.c.79718E323B27B964.idx  window.c.AEA704F153F90BC5.idx  window.h.8152441D48C56631.idx
lua/: luajit.h
src/: cleanup.c  cleanup.h  core.c  core.h  events.c  events.h  init.c  init.h  init.lua  input_handler.c  input_handler.h  inputbox.c  inputbox.h  listview.c  listview.h  lua_api.c  lua_core.c  lua_core.c.old  lua_core.h  main.c  mode_manager.c  mode_manager.h  modes.c  modes.h  script.lua  startup.c  startup.h  state.c  state.h  state_declaration.h  theme.h  ui.c  ui.h  utils.h
src/callbacks/: events.c  events.h  handler.c  handler.h
src/containers/: definition.h  list.c
src/input/: definitions.c  definitions.h  handler.h  keybinds.c  keybinds.h
src/lua/: font.c  font.h  macros.h  modes.c  modes.h  theme.c  theme.h  window.c  window.h
src/ui/: draw.c  draw.h  focus.h  font.c  font.c.old  font.h  state.h  theme.c  theme.h  widgets.h  window.c  window.h
subprojects/: raylib.wrap
tests/ui/: CMakeLists.txt  window.c
